--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -1,8 +1,11 @@
+# Força a instalação do PyTorch 100% CPU (muito menor)
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
+
 beautifulsoup4==4.13.5
 numpy==2.3.3
 pandas==2.3.2
 requests==2.32.5
-sqlite3 
 streamlit==1.49.1
 tqdm==4.67.1
 unidecode==1.4.0
@@ -12,7 +15,6 @@ joblib==1.5.2
 sentence-transformers==5.1.0
 faiss-cpu==1.12.0
 transformers==4.56.1
-torch==2.8.0
 pypdf==6.0.0
 ddgs==9.6.0
 passlib==1.7.4
@@ -20,3 +22,6 @@ bcrypt==5.0.0
 lxml==6.0.1
 python-dotenv==1.1.1
 pillow==11.3.0
+fastapi==0.120.4
+uvicorn[standard]==0.38.0
+pydantic==2.12.3
